# dolphin

Data/Sys/: GALE01.ini
Data/Sys/GameSettings/: GALE01.ini
Source/Core/AudioCommon/: AudioCommon.cpp  AudioCommon.vcxproj  AudioCommon.vcxproj.filters  CMakeLists.txt  CubebStream.cpp  CubebStream.h  NullSoundStream.cpp  NullSoundStream.h  SoundStream.h  WASAPIStream.cpp  WASAPIStream.h
Source/Core/Core/: ConfigManager.cpp  ConfigManager.h  Core.cpp  GeckoCode.cpp
Source/Core/Core/Config/: GraphicsSettings.cpp  MainSettings.cpp  MainSettings.h
Source/Core/Core/ConfigLoaders/: IsSettingSaveable.cpp
Source/Core/Core/HW/: AudioInterface.cpp
Source/Core/Core/HW/DVD/: DVDInterface.cpp  DVDThread.cpp  DVDThread.h  FileMonitor.cpp  FileMonitor.h
Source/Core/Core/HW/SI/: SI.cpp
Source/Core/Core/HW/WiimoteEmu/: Speaker.cpp
Source/Core/DolphinQt/Settings/: AudioPane.cpp
Source/Core/InputCommon/: GCAdapter.cpp  GCAdapter.h
Source/Core/VideoCommon/: BPStructs.cpp  VideoBackendBase.cpp
